[package]
name = "guessing_game_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

# keep the normal rand defaults (they include `std` and `thread_rng`)
rand = "0.8"

# give rand a JS‑side entropy source for the browser
getrandom = { version = "0.2", features = ["js"] }
